query logs done